# v4l2-ctl-gui

./: .gitignore  CMakeLists.txt  README.md
include/: ncurses-v4l2-ctl.hpp
src/: main.cpp
